:bug: Fix small interface errors

--- a/frontend/resources/styles/common/dependencies/colors.scss
+++ b/frontend/resources/styles/common/dependencies/colors.scss
@@ -50,7 +50,7 @@ $color-gray-60: #1f1f1f;
 
 // UI colors
 $color-select: #1fdea7;
-$color-distance: #db00ff;
+$color-distance: #ff6fe0;
 $color-snap: #d383da;
 
 // Mixing Color variable for creating both light and dark colors
