--- a/frontend/src/app/main/ui/workspace/right_header.scss
+++ b/frontend/src/app/main/ui/workspace/right_header.scss
@@ -16,56 +16,39 @@
   .users-section {
     position: relative;
     min-width: $s-32;
+    max-width: $s-72;
+    padding: $s-4 $s-6;
   }
   .zoom-section {
     .zoom-widget {
       @include buttonStyle;
       display: flex;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: center;
       height: $s-28;
-      width: $s-72;
-      max-width: $s-72;
-      padding: $s-4;
+      max-width: $s-48;
       border-radius: $br-8;
       .label {
         @include titleTipography;
-        color: var(--menu-foreground-color);
-      }
-      .icon {
-        @include flexCenter;
-        svg {
-          @extend .button-icon;
-          stroke: var(--menu-foreground-color);
-          transform: rotate(90deg);
-        }
+        color: var(--button-tertiary-foreground-color-rest);
       }
 
       &:hover {
-        background-color: var(--button-tertiary-background-color-hover);
         .label {
-          color: var(--button-tertiary-foreground-color-hover);
-        }
-        .icon svg {
-          stroke: var(--button-tertiary-foreground-color-hover);
+          color: var(--button-tertiary-foreground-color-focus);
         }
       }
       &.selected {
-        background-color: var(--button-tertiary-background-color-selected);
-        border: $s-2 solid var(--button-tertiary-border-color-selected);
         .label {
-          color: var(--button-tertiary-foreground-color-active);
-        }
-        .icon svg {
-          stroke: var(--button-tertiary-foreground-color-active);
+          color: var(--button-tertiary-foreground-color-focus);
         }
       }
     }
     .dropdown {
       @extend .menu-dropdown;
-      right: 0;
-      top: $s-48;
-      width: $s-280;
+      right: $s-2;
+      top: calc($s-2 + $s-48);
+      width: $s-272;
       .basic-zoom-bar {
         display: flex;
         justify-content: space-between;
@@ -94,14 +77,15 @@
           .zoom-text {
             @include flexCenter;
             height: 100%;
-            min-width: $s-68;
-            padding: 0 $s-8;
-            margin: 0;
+            min-width: $s-48;
+            padding: 0;
+            margin: 0 $s-2;
             color: var(--modal-title-foreground-color);
           }
         }
         .reset-btn {
           @extend .button-tertiary;
+          color: var(--button-tertiary-foreground-color-hover);
           height: $s-28;
           border-radius: $br-8;
         }
@@ -138,6 +122,10 @@
         height: $s-16;
         width: $s-16;
       }
+      &:hover {
+        background-color: transparent;
+        border: none;
+      }
       &.selected {
         background-color: var(--button-tertiary-background-color-selected);
         border: $s-2 solid var(--button-tertiary-border-color-selected);
@@ -159,6 +147,10 @@
         stroke: var(--icon-foreground);
         height: $s-16;
         width: $s-16;
+      }
+      &:hover {
+        background-color: transparent;
+        border: none;
       }
       &.selected {
         background-color: var(--button-tertiary-background-color-selected);
@@ -214,6 +206,9 @@
       stroke: var(--icon-foreground);
       height: $s-16;
       width: $s-16;
+    }
+    &:hover {
+      background-color: transparent;
     }
   }
 }
