--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/frame_grid.scss
@@ -34,15 +34,13 @@
             height: $s-32;
             width: $s-28;
             border-radius: $br-8 0 0 $br-8;
+            box-sizing: border-box;
+            border: $s-1 solid var(--input-background-color);
             svg {
               @extend .button-icon;
             }
             &.selected {
-              background-color: var(--button-secondary-background-color-active);
-              color: var(--button-secondary-foreground-color-active);
-              svg {
-                stroke: var(--button-secondary-foreground-color-active);
-              }
+              @extend .button-icon-selected;
             }
           }
           .type-select-wrapper {
@@ -52,6 +50,12 @@
             height: $s-32;
             .grid-type-select {
               border-radius: 0;
+              height: 100%;
+              box-sizing: border-box;
+              border: $s-1 solid var(--input-background-color);
+              &:hover {
+                border: $s-1 solid var(--input-background-color-hover);
+              }
             }
           }
           .grid-size {
@@ -70,11 +74,13 @@
             width: $s-60;
             margin: 0;
             padding: 0;
-            border: $s-1 solid var(--input-background-color);
             position: relative;
             border-radius: 0 $br-8 $br-8 0;
             .column-select {
               height: $s-32;
+              border-radius: 0 $br-8 $br-8 0;
+              box-sizing: border-box;
+              border: $s-1 solid var(--input-background-color);
               .numeric-input {
                 @extend .input-base;
                 margin: 0;
@@ -90,22 +96,29 @@
           }
 
           &.hidden {
-            .show-options,
+            .show-options {
+              @include hiddenElement;
+              border: $s-1 solid var(--input-border-color-disabled);
+            }
             .type-select-wrapper,
             .editable-select-wrapper {
-              background-color: transparent;
-              border: $s-1 solid var(--input-border-color-disabled);
-              color: var(--input-foreground-color-disabled);
+              @include hiddenElement;
               .column-select,
               .grid-type-select {
-                background-color: transparent;
+                @include hiddenElement;
+                border: $s-1 solid var(--input-border-color-disabled);
+              }
+              .column-select {
+                @include hiddenElement;
+                border-radius: 0 $br-8 $br-8 0;
+                .numeric-input {
+                  @include hiddenElement;
+                }
               }
             }
             .grid-size {
-              background-color: transparent;
+              @include hiddenElement;
               border: $s-1 solid var(--input-border-color-disabled);
-              color: var(--input-foreground-color-disabled);
-
               .icon {
                 stroke: var(--input-foreground-color-disabled);
               }
@@ -149,7 +162,7 @@
           position: relative;
           display: flex;
           gap: $s-4;
-          .select-wrapper {
+          .orientation-select-wrapper {
             width: $s-92;
             padding: 0;
           }
@@ -162,6 +175,9 @@
             width: $s-32;
             svg {
               @extend .button-icon;
+            }
+            &.selected {
+              @extend .button-icon-selected;
             }
           }
           .height {
@@ -185,7 +201,7 @@
             @include menuShadow;
             @include flexColumn;
             position: absolute;
-            top: $s-36;
+            top: calc($s-2 + $s-28);
             right: 0;
             width: $s-156;
             max-height: $s-300;
