--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -159,6 +159,12 @@
   --input-checkbox-border-color-hover: var(--color-accent-primary-muted);
   --input-checkbox-background-color-intermediate: var(--color-foreground-secondary);
 
+  // Checkbox color
+  --input-checkbox-inactive-background-color: var(--off-white);
+  --input-checkbox-inactive-foreground-color: var(--color-background-primary);
+  --input-checkbox-active-background-color: var(--color-accent-primary);
+  --input-checkbox-active-foreground-color: var(--color-background-primary);
+
   --menu-background-color: var(--color-background-tertiary);
   --menu-foreground-color: var(--color-foreground-primary);
   --menu-background-color-selected: var(--color-background-tertiary);
