:bug: Fix No tooltip when user is hovering over the component in Swap sidebar

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
@@ -230,6 +230,11 @@
         background-color: var(--assets-item-background-color);
         color: var(--assets-item-name-foreground-color);
 
+        .component-name {
+          @include textEllipsis;
+          width: 80%;
+        }
+
         svg,
         img {
           background-color: var(--assets-component-background-color);
